@@ -177,6 +177,9 @@ class FakeStreamer:
     def getName(self):
         return "fakestreamer"
 
+    def hasCaps(self):
+        return not self.caps == None
+
 
 class TestHTTPStreamingResource(testsuite.TestCase):
     # helpers
